[project]
name = "lumisc-py"
version = "0.1.0"
description = "lumisc provides a number of small functions and utilities that I find useful or use regularly."
readme = "README.md"
authors = [
    { name = "Luke Hannan", email = "luke@lukehannan.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",

  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/luhann/lumisc.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
